force-app/main/default/objects/Opportunity/fields/Gift_Aid_Claim__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Gift Aid Claim this is related to</inlineHelpText>
    <label>Gift Aid Claim</label>
    <referenceTo>Gift_Aid_Claim__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>