force-app/main/default/objects/Opportunity/fields/Gift_Aid_Contact__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the contact we are processing gift aid for</inlineHelpText>
    <label>Gift Aid Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>