force-app/main/default/objects/Opportunity/fields/Gift_Aid_Source__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Source__c</fullName>
    <inlineHelpText>Use this to confirm the source of the gift aid submission</inlineHelpText>
    <label>Gift Aid Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GAD_Source</valueSetName>
    </valueSet>
</CustomField>