force-app/main/default/objects/Opportunity/fields/Giftable_Record__c.field-meta.xml
<CustomField>
    <fullName>Giftable_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This tick box is used to confirm that this record can have gift aid applied to it</inlineHelpText>
    <label>Giftable Record</label>
    <type>Checkbox</type>
</CustomField>